[package]
name = "slow-target"
version = "0.1.0"
authors = ["Miro Svrtan <miro@mirosvrtan.me>"]
edition = "2018"

[dependencies]
chrono = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rocket = "0.4.2"
[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]